fw/core/ddi/tbor/api/tests/compile_tests/fail/finish_before_required.stderr
error[E0599]: no method named `finish` found for struct `EarlyFinishEnc<'_, EarlyFinishS0>` in the current scope
  --> tests/compile_tests/fail/finish_before_required.rs:16:10
   |
 6 |   #[tbor(opcode = 0x03)]
   |   ---------------------- method `finish` not found for this struct
...
15 |       let _ = EarlyFinish::encode(&mut buf).unwrap()
   |  _____________-
16 | |         .finish();
   | |         -^^^^^^ method not found in `EarlyFinishEnc<'_, EarlyFinishS0>`
   | |_________|
   |
   |
   = note: the method was found for
           - `EarlyFinishEnc<'a, EarlyFinishS1>`
           - `EarlyFinishEnc<'a, EarlyFinishS2>`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `finish`, perhaps you need to implement it:
           candidate #1: `Hasher`
